Fix spacing of graphic for page-not-found

--- a/src/app/pagenotfound/pagenotfound.component.css
+++ b/src/app/pagenotfound/pagenotfound.component.css
@@ -5,7 +5,3 @@
 #text {
     margin-top: 4em;
 }
-
-#text, #text2 {
-    text-align: center;
-}
